feat: Updated the year in the change log, adjusted the web service port, optimized the style of the page header, added a website icon, and updated the year in the page footer.

--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3DPass区块链监控 - 主页</title>
+    <link rel="icon" type="image/png" href="/3dpass-logo.png">
+    <link rel="icon" sizes="32x32" href="/3dpass-logo.png">
+    <link rel="icon" sizes="16x16" href="/3dpass-logo.png">
     <link rel="stylesheet" href="/style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>🔗 3DPass区块链监控</h1>
-            <p class="subtitle">实时监控3DPass网络状态和矿工活动</p>
+            <div class="header-content">
+                <img src="/3dpass-logo.png" alt="3DPass Logo" class="header-logo">
+                <div class="header-text">
+                    <h1>3DPass区块链监控</h1>
+                    <p class="subtitle">实时监控3DPass网络状态和矿工活动</p>
+                </div>
+            </div>
         </div>
     </header>
 
@@ -136,7 +144,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 3DPass区块链监控系统</p>
+            <p>&copy; 2025 3DPass区块链监控系统</p>
         </div>
     </footer>
 
