--- a/public/miner.html
+++ b/public/miner.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>矿工详情 - 3DPass区块链监控</title>
+    <link rel="icon" type="image/png" href="/3dpass-logo.png">
+    <link rel="icon" sizes="32x32" href="/3dpass-logo.png">
+    <link rel="icon" sizes="16x16" href="/3dpass-logo.png">
     <link rel="stylesheet" href="/style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
@@ -12,9 +15,12 @@
         <div class="container">
             <div class="header-nav">
                 <a href="/" class="back-btn">← 返回主页</a>
-                <div>
-                    <h1>👤 矿工详情</h1>
-                    <p class="miner-address" id="minerAddress">-</p>
+                <div class="header-content">
+                    <img src="/3dpass-logo.png" alt="3DPass Logo" class="header-logo header-logo-small">
+                    <div class="header-text">
+                        <h1>矿工详情</h1>
+                        <p class="miner-address" id="minerAddress">-</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -79,7 +85,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 3DPass区块链监控系统</p>
+            <p>&copy; 2025 3DPass区块链监控系统</p>
         </div>
     </footer>
 
