feat: Add current block height display to dashboard

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,10 @@
         <section class="stats-section">
             <div class="stats-grid">
                 <div class="stat-card">
+                    <h3>当前区块</h3>
+                    <p class="stat-value" id="currentBlock">-</p>
+                </div>
+                <div class="stat-card">
                     <h3>当前难度</h3>
                     <p class="stat-value" id="currentDifficulty">-</p>
                 </div>
