feat: add validator count

--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,10 @@
                     <h3>当前时段矿工数</h3>
                     <p class="stat-value" id="periodMiners">-</p>
                 </div>
+                <div class="stat-card">
+                    <h3>当前验证者数</h3>
+                    <p class="stat-value" id="validatorCount">-</p>
+                </div>
             </div>
 
             <div class="chart-container">
